fix broken layout

--- a/javascript-collections/src/scss/styles.scss
+++ b/javascript-collections/src/scss/styles.scss
@@ -73,7 +73,6 @@ body {
   }
 
   &__item {
-    width: 33.33%;
     border-bottom: 1px solid #bbb;
     padding: 0.5rem;
   }
